--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
-  <body style="background-color: #2a2b2d;" class="sidebar-collapse">
+  <body style="background-color:black;" class="sidebar-collapse">
     <noscript>
       <strong>We're sorry but Shift-Two doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
